Upsdate URLs to use Rendder

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -108,6 +108,7 @@
         updateHeaderFooter();
         updateCanvasStyle();
 
+        // Listen for changes in color scheme
         window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
             updateHeaderFooter();
             updateCanvasStyle();
