Upsdate URLs to use Rendder

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -29,10 +29,9 @@
         }
 
         /* Move header and footer closer to top/bottom */
-        #header {
-            top: 0;
-            margin-top: 0; /* Remove unwanted space above header */
-        }
+        #footer {
+    bottom: 20px; /* Move footer 20px upwards */
+    margin-bottom: 0; /* Remove unwanted space below footer */
 
         #footer {
             bottom: 0;
