Upsdate URLs to use Rendder

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -31,7 +31,7 @@
         /* Move header and footer closer to top/bottom */
         #footer {
     bottom: 20px; /* Move footer 20px upwards */
-    margin-bottom: 35; /* Remove unwanted space below footer */
+    margin-bottom: 40px; /* Remove unwanted space below footer */
      }
 
         #footer {
