--- a/receptor/index.html
+++ b/receptor/index.html
@@ -27,11 +27,14 @@
             background-size: cover;
             background-color: transparent;
         }
-
+        #header {
+    top: -15px; /* Move header 10px upwards */
+    margin-top: 0; /* Remove any unwanted space above */
+}
         /* Move header and footer closer to top/bottom */
         #footer {
     bottom: 20px; /* Move footer 20px upwards */
-    margin-bottom: 40px; /* Remove unwanted space below footer */
+    margin-bottom: 30px; /* Remove unwanted space below footer */
      }
 
     
