Upsdate URLs to use Rendder

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -29,14 +29,14 @@
         }
 
         #header {
-            top: 0; /* Position header at the top */
-            margin-top: 0;
-        }
-
+    top: -15px; /* Move header 10px upwards */
+    margin-top: 0; /* Remove any unwanted space above */
+}
+        /* Move header and footer closer to top/bottom */
         #footer {
-            bottom: 0; /* Position footer at the bottom */
-            margin-bottom: 0;
-        }
+    bottom: 20px; /* Move footer 20px upwards */
+    margin-bottom: 30px; /* Remove unwanted space below footer */
+     }
 
         canvas {
             display: block;
