--- a/emisor/index.html
+++ b/emisor/index.html
@@ -17,6 +17,8 @@
             margin: 0 auto;
             background: #000;
             touch-action: none; /* Disable scrolling gestures */
+            width: 100%; /* Scale canvas to fit the screen width */
+            max-height: 100vh; /* Limit height to fit screen */
         }
         #controls {
             position: fixed;
@@ -78,16 +80,14 @@
         let path = [];
         let lineWidth = thicknessInput.value;
 
-        // Adjust canvas size for the emitter
-        function resizeCanvas() {
-            const width = window.innerWidth * 0.9; // Slight margin for better fitting
-            const height = window.innerHeight * 0.9;
-            canvas.width = width;
-            canvas.height = height;
+        // Set fixed canvas size (1125x2436)
+        function setCanvasSize() {
+            canvas.width = 1125;
+            canvas.height = 2436;
         }
-        window.addEventListener('resize', resizeCanvas);
-        resizeCanvas();
+        setCanvasSize();
 
+        // Maintain thickness value
         thicknessInput.addEventListener('input', () => {
             lineWidth = thicknessInput.value;
         });
@@ -111,13 +111,13 @@
             ctx.stroke();
         }
 
-        // Drawing
+        // Drawing logic
         canvas.addEventListener('pointerdown', (e) => {
             drawing = true;
             const rect = canvas.getBoundingClientRect();
             path.push({
-                x: e.clientX - rect.left,
-                y: e.clientY - rect.top,
+                x: (e.clientX - rect.left) * (canvas.width / rect.width),
+                y: (e.clientY - rect.top) * (canvas.height / rect.height),
                 move: true,
                 width: lineWidth
             });
@@ -126,8 +126,8 @@
             if (!drawing) return;
             const rect = canvas.getBoundingClientRect();
             const prevPoint = path[path.length - 1];
-            const x = e.clientX - rect.left;
-            const y = e.clientY - rect.top;
+            const x = (e.clientX - rect.left) * (canvas.width / rect.width);
+            const y = (e.clientY - rect.top) * (canvas.height / rect.height);
             drawChalkLine(prevPoint.x, prevPoint.y, x, y);
             path.push({ x, y, move: false, width: lineWidth });
         });
