--- a/emisor/index.html
+++ b/emisor/index.html
@@ -17,44 +17,38 @@
             margin: 0 auto;
             background: #000;
             touch-action: none; /* Disable scrolling gestures */
-            width: 100%; /* Scale canvas to fit the screen width */
-            max-height: 100vh; /* Limit height to fit screen */
         }
         #controls {
             position: fixed;
-            top: 50%;
-            right: 10px;
-            transform: translateY(-50%);
+            bottom: 10px;
+            width: 100%;
+            text-align: center;
             background: rgba(0, 0, 0, 0.7);
-            padding: 10px;
-            border-radius: 8px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            z-index: 10;
+            padding: 10px 0;
+            box-sizing: border-box;
         }
         button, label {
             color: white;
-            margin: 5px 0;
-            font-size: 1rem;
+            margin: 5px;
+            font-size: 1.2rem;
+        }
+        input[type="range"] {
+            width: 80%;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 1.2rem;
             background-color: #444;
             border: none;
             border-radius: 5px;
-            padding: 8px 15px;
             cursor: pointer;
-            text-align: center;
         }
         button:active {
             background-color: #666;
         }
-        input[type="range"] {
-            width: 100%;
-            margin: 10px 0;
-        }
         @media (max-width: 768px) {
             button, label {
-                font-size: 0.9rem;
-                padding: 7px 12px;
+                font-size: 1rem;
             }
             input[type="range"] {
                 width: 90%;
@@ -65,7 +59,7 @@
 <body>
     <canvas id="canvas"></canvas>
     <div id="controls">
-        <label for="thickness">Grosor:</label>
+        <label for="thickness">Grosor del trazo:</label>
         <input id="thickness" type="range" min="1" max="10" value="2">
         <button id="sendButton">Enviar</button>
         <button id="clearButton">Borrar</button>
@@ -80,14 +74,14 @@
         let path = [];
         let lineWidth = thicknessInput.value;
 
-        // Set fixed canvas size (1125x2436)
-        function setCanvasSize() {
-            canvas.width = 1125;
-            canvas.height = 2436;
+        // Adjust canvas size for mobile devices
+        function resizeCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
         }
-        setCanvasSize();
+        window.addEventListener('resize', resizeCanvas);
+        resizeCanvas();
 
-        // Maintain thickness value
         thicknessInput.addEventListener('input', () => {
             lineWidth = thicknessInput.value;
         });
@@ -111,25 +105,16 @@
             ctx.stroke();
         }
 
-        // Drawing logic
+        // Drawing
         canvas.addEventListener('pointerdown', (e) => {
             drawing = true;
-            const rect = canvas.getBoundingClientRect();
-            path.push({
-                x: (e.clientX - rect.left) * (canvas.width / rect.width),
-                y: (e.clientY - rect.top) * (canvas.height / rect.height),
-                move: true,
-                width: lineWidth
-            });
+            path.push({ x: e.offsetX, y: e.offsetY, move: true, width: lineWidth });
         });
         canvas.addEventListener('pointermove', (e) => {
             if (!drawing) return;
-            const rect = canvas.getBoundingClientRect();
             const prevPoint = path[path.length - 1];
-            const x = (e.clientX - rect.left) * (canvas.width / rect.width);
-            const y = (e.clientY - rect.top) * (canvas.height / rect.height);
-            drawChalkLine(prevPoint.x, prevPoint.y, x, y);
-            path.push({ x, y, move: false, width: lineWidth });
+            drawChalkLine(prevPoint.x, prevPoint.y, e.offsetX, e.offsetY);
+            path.push({ x: e.offsetX, y: e.offsetY, move: false, width: lineWidth });
         });
         canvas.addEventListener('pointerup', () => (drawing = false));
 
