--- a/receptor/index.html
+++ b/receptor/index.html
@@ -106,32 +106,7 @@
             updateCanvasStyle();
         });
 
-        async function fetchDibujo() {
-            try {
-                const response = await fetch('https://dibujo-pizarra.onrender.com/api/dibujo');
-                const path = await response.json();
-
-                ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear canvas initially
-                if (path.length === 0) return;
-
-                ctx.beginPath();
-
-                path.forEach((point) => {
-                    if (point.move) {
-                        ctx.moveTo(point.x, point.y);
-                    } else {
-                        ctx.lineTo(point.x, point.y);
-                        ctx.lineWidth = point.width || 2;
-                    }
-                });
-
-                ctx.stroke();
-            } catch (error) {
-                console.error('Error al obtener el dibujo:', error);
-            }
-        }
-
-        setInterval(fetchDibujo, 2000);
+        let drawingData = [];
 
         // Erasing functionality (using touch events)
         let isErasing = false;
@@ -167,7 +142,31 @@
 
             // Clear a small area at the position (eraser size of 20x20 px)
             ctx.clearRect(x - eraserSize / 2, y - eraserSize / 2, eraserSize, eraserSize);
+
+            // Add erased points (you can keep track of erased points if needed)
+            drawingData.push({ type: 'erase', x, y, size: eraserSize });
         }
+
+        // Function to draw based on stored data
+        function draw() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);  // Clear canvas first
+
+            drawingData.forEach(point => {
+                if (point.type === 'draw') {
+                    ctx.beginPath();
+                    ctx.moveTo(point.startX, point.startY);
+                    ctx.lineTo(point.x, point.y);
+                    ctx.lineWidth = point.lineWidth;
+                    ctx.stroke();
+                } else if (point.type === 'erase') {
+                    ctx.clearRect(point.x - point.size / 2, point.y - point.size / 2, point.size, point.size);
+                }
+            });
+
+            requestAnimationFrame(draw);  // Redraw continuously
+        }
+
+        requestAnimationFrame(draw);
 
         // Add touch event listeners
         canvas.addEventListener('touchstart', startErase);
