--- a/receptor/index.html
+++ b/receptor/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="white">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Dark status bar for dark mode -->
+    <meta name="theme-color" content="white"> <!-- White status bar for light mode -->
     <title>Receptor</title>
     <style>
         body, html {
@@ -20,7 +20,7 @@
 
         #header, #footer {
             width: 100%;
-            height: 60px;
+            height: 60px; /* Header/footer height */
             position: fixed;
             left: 0;
             z-index: 10;
@@ -29,24 +29,24 @@
         }
 
         #header {
-            top: -13px;
-            margin-top: 0;
+            top: -13px; /* Move header 10px upwards */
+            margin-top: 0; /* Remove any unwanted space above */
         }
-
+        /* Move header and footer closer to top/bottom */
         #footer {
-            bottom: 15px;
-            margin-bottom: 20px;
+            bottom: 15px; /* Move footer 20px upwards */
+            margin-bottom: 20px; /* Remove unwanted space below footer */
         }
 
         canvas {
             display: block;
             width: 100%;
-            height: 100%;
+            height: 100%; /* Full screen */
             position: fixed;
             top: 0;
             left: 0;
             background-color: transparent;
-            z-index: 1;
+            z-index: 1; /* Ensure it stays behind header/footer */
         }
     </style>
 </head>
@@ -66,12 +66,16 @@
         }
 
         resizeCanvas();
+
+        // Adjust canvas size on window resize
         window.addEventListener('resize', resizeCanvas);
 
+        // Detect Dark Mode
         function isDarkMode() {
             return window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
         }
 
+        // Update Header and Footer Images based on Mode
         function updateHeaderFooter() {
             const header = document.getElementById('header');
             const footer = document.getElementById('footer');
@@ -88,6 +92,7 @@
             }
         }
 
+        // Update Canvas style based on Dark Mode
         function updateCanvasStyle() {
             if (isDarkMode()) {
                 canvas.style.backgroundColor = 'black';
@@ -98,9 +103,11 @@
             }
         }
 
+        // Initialize header/footer styles based on the current mode
         updateHeaderFooter();
         updateCanvasStyle();
 
+        // Listen for changes in color scheme
         window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
             updateHeaderFooter();
             updateCanvasStyle();
@@ -110,10 +117,10 @@
             try {
                 const response = await fetch('https://dibujo-pizarra.onrender.com/api/dibujo');
                 const path = await response.json();
+                console.log(path);
 
-                ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear canvas initially
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
                 if (path.length === 0) return;
-
                 ctx.beginPath();
 
                 path.forEach((point) => {
@@ -131,12 +138,11 @@
             }
         }
 
+        // Periodically fetch drawing data
         setInterval(fetchDibujo, 2000);
 
         // Erasing functionality (using touch events)
         let isErasing = false;
-        const eraserSize = 20;  // Eraser size (make it bigger if needed)
-        let lastEraseTime = 0;  // Used for throttling erase action
 
         function startErase(event) {
             isErasing = true;
@@ -150,23 +156,13 @@
         function erase(event) {
             if (!isErasing) return;
 
-            // Throttling the erase function to avoid flickering and dotted lines
-            const now = Date.now();
-            if (now - lastEraseTime < 10) return;  // Throttle by 10ms to avoid fast movement issues
-            lastEraseTime = now;
+            // Get touch position
+            const touch = event.touches[0];
+            const x = touch.clientX;
+            const y = touch.clientY;
 
-            // Get touch position (clientX and clientY for mouse, touches for touch devices)
-            let x, y;
-            if (event.touches) {
-                x = event.touches[0].clientX;
-                y = event.touches[0].clientY;
-            } else {
-                x = event.clientX;
-                y = event.clientY;
-            }
-
-            // Clear a small area at the position (eraser size of 20x20 px)
-            ctx.clearRect(x - eraserSize / 2, y - eraserSize / 2, eraserSize, eraserSize);
+            // Clear a small area around the touch point (adjust the size of the "eraser")
+            ctx.clearRect(x - 20, y - 20, 40, 40); // Erase in a 40x40 px area
         }
 
         // Add touch event listeners
@@ -174,16 +170,6 @@
         canvas.addEventListener('touchmove', erase);
         canvas.addEventListener('touchend', stopErase);
         canvas.addEventListener('touchcancel', stopErase);
-
-        // Add mouse event listeners (for desktop use)
-        canvas.addEventListener('mousedown', startErase);
-        canvas.addEventListener('mousemove', erase);
-        canvas.addEventListener('mouseup', stopErase);
-        canvas.addEventListener('mouseleave', stopErase);
-
-        // Prevent touch events from firing default actions
-        canvas.addEventListener('touchstart', (event) => event.preventDefault());
-        canvas.addEventListener('touchmove', (event) => event.preventDefault());
     </script>
 </body>
 </html>
