--- a/receptor/index.html
+++ b/receptor/index.html
@@ -29,14 +29,16 @@
         }
 
         #header {
-    top: -13px; /* Move header 10px upwards */
-    margin-top: 0; /* Remove any unwanted space above */
-}
+            top: -13px; /* Adjust as needed to remove the space */
+            margin-top: 0; /* Remove any unwanted space above */
+            background-color: transparent; /* Ensure it's transparent for light mode */
+        }
+
         /* Move header and footer closer to top/bottom */
         #footer {
-    bottom: 15px; /* Move footer 20px upwards */
-    margin-bottom: 20px; /* Remove unwanted space below footer */
-     }
+            bottom: 15px; /* Move footer 20px upwards */
+            margin-bottom: 20px; /* Remove unwanted space below footer */
+        }
 
         canvas {
             display: block;
@@ -80,12 +82,14 @@
             const header = document.getElementById('header');
             const footer = document.getElementById('footer');
             if (isDarkMode()) {
-                header.style.backgroundImage = 'url("dark-header.png")';
+                header.style.backgroundImage = 'none'; // Remove background image for dark mode
+                header.style.backgroundColor = 'black'; // Set background to black for dark mode
                 footer.style.backgroundImage = 'url("dark-footer.png")';
                 document.querySelector('meta[name="theme-color"]').setAttribute('content', 'black');
                 document.querySelector('meta[name="apple-mobile-web-app-status-bar-style"]').setAttribute('content', 'black-translucent');
             } else {
                 header.style.backgroundImage = 'url("light-header.png")';
+                header.style.backgroundColor = 'transparent'; // Ensure it's transparent for light mode
                 footer.style.backgroundImage = 'url("light-footer.png")';
                 document.querySelector('meta[name="theme-color"]').setAttribute('content', 'white');
                 document.querySelector('meta[name="apple-mobile-web-app-status-bar-style"]').setAttribute('content', 'default');
@@ -138,8 +142,8 @@
             }
         }
 
-        // Periodically fetch drawing data
-        setInterval(fetchDibujo, 2000);
+        // Periodically fetch drawing data (optional)
+        setInterval(fetchDibujo, 2000); // Uncomment if you still need to periodically fetch drawings
     </script>
 </body>
 </html>
