--- a/receptor/index.html
+++ b/receptor/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Dark status bar for dark mode -->
-    <meta name="theme-color" content="white"> <!-- White status bar for light mode -->
+    <meta name="theme-color" content="black"> <!-- White status bar for light mode -->
     <title>Receptor</title>
     <style>
         body, html {
