Upsdate URLs to use Rendder

--- a/receptor/index.html
+++ b/receptor/index.html
@@ -32,14 +32,16 @@
         }
 
         #header {
-            top: 0;
-            height: 60px; /* Adjusted height for the header */
+            top: -13px; /* Move header upwards */
+            height: 60px; /* Adjusted height for header */
+            margin-top: 0; /* Remove unwanted space above */
             padding-top: env(safe-area-inset-top, 20px);
         }
 
         #footer {
-            bottom: 0;
-            height: 60px; /* Adjusted height for the footer */
+            bottom: 15px; /* Move footer upwards */
+            height: 60px; /* Adjusted height for footer */
+            margin-bottom: 0; /* Remove unwanted space below */
             padding-bottom: env(safe-area-inset-bottom, 20px);
         }
 
